--- a/lang/backup_scheduler-fr_FR.po
+++ b/lang/backup_scheduler-fr_FR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2011-12-05T16:58:53+00:00\n"
+"PO-Revision-Date: 2011-12-12T12:59:07+00:00\n"
 "Last-Translator: SedLex <http://www.sedlex.fr/>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -95,17 +95,11 @@ msgstr "Paramètres"
 msgid "Manage translations"
 msgstr "Gérer les traductions"
 
-msgid "This form is an easy way to contact the author and to discuss issues / incompatibilities / etc."
-msgstr "Ce formulaire vous permet de contacter facilement l&#039;auteur afin de discuter de vos problèmes, des incompatibilités, etc."
-
 msgid "Give feedback"
 msgstr "Donner un feedback"
 
-msgid "Here is the plugins developped by the author:"
-msgstr "Voici les plugins développés par l&#039;auteur :"
-
-msgid "Other possible plugins"
-msgstr "Autres plugins possibles"
+msgid "Other plugins"
+msgstr "Autres plugins"
 
 msgid "Date of the backup"
 msgstr "Date de la sauvegarde"
@@ -151,4 +145,13 @@ msgstr "Salutations, "
 
 msgid "Backup of %s (%s)"
 msgstr "Sauvegarde de %s (%s)"
+
+msgid "This form is an easy way to contact the author and to discuss issues / incompatibilities / etc."
+msgstr "Ce formulaire vous permet de contacter facilement l&#039;auteur afin de discuter de vos problèmes, des incompatibilités, etc."
+
+msgid "Here is the plugins developped by the author:"
+msgstr "Voici les plugins développés par l&#039;auteur :"
+
+msgid "Other possible plugins"
+msgstr "Autres plugins possibles"
 
