--- a/lang/backup_scheduler-de_CH.po
+++ b/lang/backup_scheduler-de_CH.po
@@ -4,9 +4,9 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2011-12-17T01:43:36+00:00\n"
+"PO-Revision-Date: 2011-12-23T20:24:49+00:00\n"
+"Last-Translator: PeterDbbert <duebbert@gmx.net>\n"
 "Last-Translator: BernhardKnab <bernhardknab@bernik.ch>\n"
-"Last-Translator: BernhardKnabn <bernhardknab@bernik.ch>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -162,14 +162,17 @@ msgstr "(Bis jetzt sind keine Sicherungsdateien vorhanden... Du solltest warten 
 msgid "An other backup is still in progress (for %s seconds)... Please wait!"
 msgstr "Eine andere Sicherung wird ausgeführt (noch %s Sekunden)... Bitte warte!"
 
+msgid "An other SQL extraction is still in progress (for %s seconds)... Please wait!"
+msgstr ""
+
 msgid "An error occured while sending mail!"
 msgstr "Ein Fehler wurde während des Mailversandes ausgegeben!"
 
+msgid "An unknown error occured!"
+msgstr "Es ist ein unbekannter Fehler aufgetreten."
+
 msgid "A new backup have been generated!"
 msgstr "Eine neue Sicherung wurde erstellt!"
-
-msgid "An error occurred"
-msgstr "Ein Fehler wurde ausgegeben"
 
 msgid "Dear sirs,"
 msgstr "Lieber Nutzer,"
